--- a/angularProject/src/app/app.component.html
+++ b/angularProject/src/app/app.component.html
@@ -1,4 +1,6 @@
 <div style ="text-align:center">
 <h1>{{title}}</h1>
-<app-test></app-test>
+<h2>{{messageFromChild}}</h2>
+<!-- <app-test parentData='Might God! I am your follower!' (childEvent)="messageFromChild=$event"></app-test> -->
+<app-hero-list></app-hero-list>
 </div>
