--- a/HSPA/Frontend/src/app/property/property-card/property-card.component.html
+++ b/HSPA/Frontend/src/app/property/property-card/property-card.component.html
@@ -1,15 +1,10 @@
 
-
-<div class="row">
-  <div class="shadow-lg col-sm-4 p-3">
-  <div class="card">
+<div class="card">
     <img class="propImg" src="assets/images/house-default.png"/>
     <div class ="card-body p-1">
-    <h2>{{Property.Name}}</h2>
-    <h3>{{Property.Type}}</h3>
-    <h4>{{Property.Price}}</h4>
+    <h2>{{property.Name}}</h2>
+    <h3>{{property.Type}}</h3>
+    <h4>{{property.Price}}</h4>
   </div>
   </div>
-</div>
-</div>
 
