--- a/HSPA/Frontend/src/app/property/property-card/property-card.component.html
+++ b/HSPA/Frontend/src/app/property/property-card/property-card.component.html
@@ -1,9 +1,20 @@
 
 <div class="card">
-    <img class="propImg" src="assets/images/house-default.png"/>
-    <div class ="card-body p-1">
-    <h2>{{property.Name}}</h2>
-    <h3>{{property.Type}}</h3>
+  <div class=".card-img-wrapper">
+    <img class="card-img-top" src="assets/images/house-default.png"/>
+  </div>
+  <ul class="list-inline text-center member-icons">
+    <li class="list-inline-item">
+      <button class="btn btn-primary"><i class="far fa-edit"></i></button>
+    </li>
+    <li class="list-inline-item">
+      <button class="btn btn-primary"><i class="far fa-address-book"></i></button>
+    </li>
+
+  </ul>
+  <div class ="card-body p-1">
+    <h4>{{property.Name}}</h4>
+    <h4>{{property.Type}}</h4>
     <h4>{{property.Price}}</h4>
   </div>
   </div>
