--- a/HSPA/Frontend/src/app/app.component.html
+++ b/HSPA/Frontend/src/app/app.component.html
@@ -2,7 +2,9 @@
 <app-nav-bar></app-nav-bar>
 <div class="container" style="margin-top: 70px;" >
 
-  <app-property-list></app-property-list>
+ <router-outlet></router-outlet>
+
+ <!-- A router outlet emits an activate event when a new component is instantiated, and a deactivate event when a component is destroyed. -->
 </div>
 <h1>Hello God! thanks for blessing me this project to learn ANGULAR, please bless me successfully build this project in the next a few weeks!</h1>
 
