--- a/HSPA/Frontend/src/app/property/property-card/property-card.component.html
+++ b/HSPA/Frontend/src/app/property/property-card/property-card.component.html
@@ -1,11 +1,13 @@
-
 <div class="card">
   <div class=".card-img-wrapper">
-    <img class="card-img-top" src="assets/images/house-default.png"/>
+
+
+    <img *ngIf="property.Image" class="card-img-top" src="assets/images/{{property.Image}}.jpg"/>
+    <img *ngIf="!property.Image" class="card-img-top" src="assets/images/house-default.png"/>
   </div>
   <ul class="list-inline text-center member-icons">
     <li class="list-inline-item">
-      <button class="btn btn-primary"><i class="far fa-edit"></i></button>
+      <button class="btn btn-primary" routerLink='/property-detail/{{property.Id}}'><i class="far fa-edit"></i></button>
     </li>
     <li class="list-inline-item">
       <button class="btn btn-primary"><i class="far fa-address-book"></i></button>
