--- a/HSPA/Frontend/src/app/nav-bar/nav-bar.component.html
+++ b/HSPA/Frontend/src/app/nav-bar/nav-bar.component.html
@@ -30,9 +30,15 @@
         <a class="nav-link disabled" routerLink="#" tabindex="-1" aria-disabled="true">Disabled</a>
       </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
+   <div>
+     <ul class="nav navbar-nav">
+       <li class="nav-item">
+         <a class="nav-link" routherLinkActive="active" routerLink="/user/register">Register</a>
+       </li>
+       <li class="nav-item">
+        <a class="nav-link"  routherLinkActive="active" routerLink="/user/login">Login</a>
+      </li>
+     </ul>
+   </div>
   </div>
 </nav>
