--- a/HSPA/Frontend/src/app/property/add-property/add-property.component.html
+++ b/HSPA/Frontend/src/app/property/add-property/add-property.component.html
@@ -1,2 +1,31 @@
-<p>add-property works!</p>
-<button (click)="onBack()" class="btn btn-primary">Back</button>
+<div class="card">
+  <div class="card-header">
+    Add New Property
+  </div>
+  <div class="card-body">
+<form (ngSubmit) ='onSubmit()' #Form='ngForm'>
+  <div class="form-group col-12">
+    <label for="name">Name</label>
+    <input type="text" name="Name" #propName="ngModel" ngModel class="form-control" minlength="5" required >
+    <span *ngIf="!propName.valid && propName.touched" class="error-block">
+      <span *ngIf="propName.errors.required">Please Enter Property Name</span>
+      <span  *ngIf="propName.errors.minlength">Please Enter at least 5 character to the Name</span>
+    </span>
+  </div>
+  <div class="form-group col-12">
+    <label for="type">Type</label>
+    <input type="text" name ="Type" ngModel class="form-control">
+  </div>
+  <div class="form-group col-12">
+    <label for="price">price</label>
+    <input type="text" name="Price" ngModel class="form-control">
+  </div>
+
+  <div class="form-group col-12">
+   <button [disabled]="!Form.valid" type="submit" class="btn btn-primary mr-2">Save</button>
+   <button type="reset" class="btn btn-primary">Cancel</button>
+  </div>
+</form>
+
+  </div>
+</div>
