--- a/HSPA/Frontend/src/app/nav-bar/nav-bar.component.html
+++ b/HSPA/Frontend/src/app/nav-bar/nav-bar.component.html
@@ -33,11 +33,34 @@
    <div>
      <ul class="nav navbar-nav">
        <li class="nav-item">
-         <a class="nav-link" routherLinkActive="active" routerLink="/user/register">Register</a>
+         <a class="nav-link" *ngIf=" !loggedin()" routherLinkActive="active" routerLink="/user/register">Register</a>
        </li>
        <li class="nav-item">
-        <a class="nav-link"  routherLinkActive="active" routerLink="/user/login">Login</a>
+        <a class="nav-link" *ngIf=" !loggedin()" routherLinkActive="active" routerLink="/user/login">Login</a>
       </li>
+
+      <!-- <li class="nav-item">
+        <a class="nav-link" *ngIf=" loggedin()" (click) ="onLogout()" routherLinkActive="active" routerLink="/user/logout">Logout</a>
+      </li> -->
+      <div *ngIf="loggedin()" class="dropdown mr-5" dropdown>
+        <a href="#" class="dropdown-toggle text-light" dropdownToggle (click)="false">
+          Welcome {{loggedinUser}}
+        </a>
+        <div class="dropdown-menu" *dropdownMenu>
+          <a href="#" class="dropdown-item">
+            <i class="fas fa-teachometer-alt"></i> View Dashboard
+          </a>
+          <a href="#" class="dropdown-item">
+            <i class="far fa-user-circle"></i> My Profile
+          </a>
+          <a href="#" class="dropdown-item">
+            <i class="fas far-key"></i> Change Password
+           </a>
+          <a (click) ='onLogout()' class="dropdown-item">
+            <i class="fas fa-sign-out-alt"> </i>Logout
+          </a>
+        </div>
+      </div>
      </ul>
    </div>
   </div>
