--- a/HSPA/Frontend/src/app/property/add-property/add-property.component.html
+++ b/HSPA/Frontend/src/app/property/add-property/add-property.component.html
@@ -1,31 +1,338 @@
-<div class="card">
-  <div class="card-header">
-    Add New Property
-  </div>
+<div class="row mb-5">
+<div class="col-8 shadow-lg p-0 bg-white"><div class="card">
+  <div class="card-header"><h2>List your property</h2></div>
   <div class="card-body">
-<form (ngSubmit) ='onSubmit()' #Form='ngForm'>
-  <div class="form-group col-12">
-    <label for="name">Name</label>
-    <input type="text" name="Name" #propName="ngModel" ngModel class="form-control" minlength="5" required >
-    <span *ngIf="!propName.valid && propName.touched" class="error-block">
-      <span *ngIf="propName.errors.required">Please Enter Property Name</span>
-      <span  *ngIf="propName.errors.minlength">Please Enter at least 5 character to the Name</span>
-    </span>
-  </div>
-  <div class="form-group col-12">
-    <label for="type">Type</label>
-    <input type="text" name ="Type" ngModel class="form-control">
-  </div>
-  <div class="form-group col-12">
-    <label for="price">price</label>
-    <input type="text" name="Price" ngModel class="form-control">
-  </div>
+    <form (ngSubmit)="onSubmit()" #Form="ngForm">
+      <div class="tab-panel">
+        <tabset #formTabs class="member-tabset">
+          <tab heading="Basic Info" ngModelGroup="BasicInfo" #BasicInfo ="ngModelGroup">
+            <div class="form-group col-12">
+              <p>I want to</p>
+              <div class="btn-group" btnRadioGroup ngModel name ="SellRent" required>
+                <label
+                  for=""
+                  class="btn btn-outline-primary"
+                  btnRadio="1"
+                  role="button"
+                  name="SellRent"
+                  >Sell</label
+                >
+                <label
+                  for=""
+                  class="btn btn-outline-primary"
+                  btnRadio="2"
+                  role="button"
+                  name="SellRent"
+                  >Rent</label
+                >
+              </div>
+            </div>
+            <div class="form-group col-12">
+              <p>BHK</p>
+              <div class="btn-group" btnRadioGroup [(ngModel)] ="propertyView.BHK" name="BHK">
+                <label
+                  *ngFor="let bhk of [1, 2, 3, 4]"
+                  class="btn btn-outline-primary"
+                  [btnRadio]="bhk"
+                  role="button"
+                  name="SellRent"
+                  >{{ bhk }}</label
+                >
+              </div>
+            </div>
 
-  <div class="form-group col-12">
-   <button [disabled]="!Form.valid" type="submit" class="btn btn-primary mr-2">Save</button>
-   <button type="reset" class="btn btn-primary">Cancel</button>
-  </div>
-</form>
+            <div class="form-group col-12">
+              <p>Property Type</p>
+              <div class="btn-group" btnRadioGroup
+              name='PType' [(ngModel)] ="propertyView.PType"
+              >
+                <label
+                  *ngFor="let ptype of propertyTypes"
+                  class="btn btn-outline-primary"
+                  [btnRadio]="ptype"
+                  role="button"
+                  name="SellRent"
+                  >{{ ptype }}</label
+                >
+              </div>
+            </div>
+            <div class="form-group col-12">
+              <p>Furnishing Type</p>
+              <div class="btn-group" btnRadioGroup [(ngModel)] ="propertyView.FType" name="FType">
+                <label
+                  *ngFor="let ftype of furnishTypes"
+                  class="btn btn-outline-primary"
+                  [btnRadio]="ftype"
+                  role="button"
+                  name="SellRent"
+                  >{{ ftype }}</label
+                >
+              </div>
+            </div>
+            <div class="form-group col-12">
+              <label for="name">in Building/Society/Project</label>
+              <input
+                type="text"
+                name="Name"
+                #propName="ngModel"
+                ngModel
+                class="form-control"
+                minlength="5"
+                required
+                [(ngModel)] ="propertyView.Name"
 
+              />
+              <span
+                *ngIf="!propName.valid && propName.touched"
+                class="error-block"
+              >
+                <span *ngIf="propName.errors.required"
+                  >Please Enter Property Name</span
+                >
+                <span *ngIf="propName.errors.minlength"
+                  >Please Enter at least 5 character to the Name</span
+                >
+              </span>
+            </div>
+            <div class="form-group col-12">
+              <label for="City">City</label>
+              <input type="text" class="form-control" [(ngModel)] ="propertyView.City" name="City"/>
+            </div>
+
+            <div class="form-group col-12">
+              <button
+                class="btn btn-primary btn-block mr-2"
+                (click)="selectTab(1)"
+                [disabled]="!BasicInfo.valid"
+              >
+                Next
+              </button>
+            </div>
+          </tab>
+          <tab heading="Pricing and Area">
+            <div class="form-group col-12">
+              <label>Price (in USD)</label>
+              <input type="text" class="form-control" name="price" [(ngModel)] ="propertyView.Price" />
+            </div>
+
+            <div class="form-group col-12">
+              <label>Security (in USD)</label>
+              <input type="text" class="form-control" />
+            </div>
+
+            <div class="form-group col-12">
+              <label>Maintenance (in USD)</label>
+              <input type="text" class="form-control" />
+            </div>
+
+            <div class="form-group col-12">
+              <label>Built Area (in Sqr Feet)</label>
+              <input type="text" class="form-control" [(ngModel)] ="propertyView.BuiltArea" name="BuiltArea"/>
+            </div>
+
+            <div class="form-group col-12">
+              <label>Carpet Area(in Sqr Feet)</label>
+              <input type="text" class="form-control" />
+            </div>
+
+            <div class="form-group col-12">
+              <button
+                type="button"
+                class="btn btn-primary btn-block"
+                (click)="selectTab(2)"
+              >
+                Next
+              </button>
+
+              <button
+                type="button"
+                class="btn btn-primary btn-block"
+                (click)="selectTab(0)"
+              >
+                Back
+              </button>
+            </div>
+          </tab>
+
+          <tab heading="Address">
+            <div class="form-group col-12">
+              <label>Floor</label>
+              <input type="text" class="form-control" />
+            </div>
+
+            <div class="form-group col-12">
+              <label>Total Floor</label>
+              <input type="text" class="form-control" />
+            </div>
+
+            <div class="form-group col-12">
+              <label>Address</label>
+              <input type="text" class="form-control" />
+            </div>
+
+            <div class="form-group col-12">
+              <label>Landmark</label>
+              <input type="text" class="form-control" />
+            </div>
+
+            <div class="form-group col-12">
+              <button
+                type="button"
+                class="btn btn-primary btn-block"
+                (click)="selectTab(3)"
+              >
+                Next
+              </button>
+
+              <button
+                type="button"
+                class="btn btn-primary btn-block"
+                (click)="selectTab(1)"
+              >
+                Back
+              </button>
+            </div>
+          </tab>
+
+          <tab heading="Other Details">
+            <div class="form-group col-12">
+              <label>Ready to Move</label><br />
+
+              <div class="btn-group" btnRadioGroup>
+                <label
+                  for=""
+                  class="btn btn-outline-primary"
+                  btnRadio="1"
+                  role="button"
+                  name="RTM"
+                  >Yes</label
+                >
+                <label
+                  for=""
+                  class="btn btn-outline-primary"
+                  btnRadio="2"
+                  role="button"
+                  name="RTM"
+                  >No</label
+                >
+              </div>
+            </div>
+
+            <div class="form-group col-3">
+              <label>Possession/Avaialble From</label>
+              <input
+                type="text"
+                placeholder="Datepicker"
+                class="form-control"
+                bsDatepicker
+                [bsConfig]="{
+                  containerClass: 'theme-dark-blue',
+                  dateInputFormat: 'DD/MM/YYYY'
+                }"
+              />
+            </div>
+
+            <div class="form-group col-12">
+              <label>Age of Property</label>
+              <input type="text" class="form-control" />
+            </div>
+
+            <div class="form-group col-12">
+              <p><label>Gated Community</label></p>
+
+              <div class="btn-group" btnRadioGroup>
+                <label
+                  for=""
+                  class="btn btn-outline-primary"
+                  btnRadio="1"
+                  role="button"
+                  name="gated"
+                  >Yes</label
+                >
+                <label
+                  for=""
+                  class="btn btn-outline-primary"
+                  btnRadio="2"
+                  role="button"
+                  name="gated"
+                  >No</label
+                >
+              </div>
+            </div>
+
+            <div class="form-group col-12">
+              <p><label>Main Entrance</label></p>
+              <div class="btn-group" btnRadioGroup>
+                <label
+                  *ngFor="let me of mainEntrances"
+                  class="btn btn-outline-primary"
+                  [btnRadio]="me"
+                  role="button"
+                  name="mainEntrance"
+                  >{{ me }}</label
+                >
+              </div>
+            </div>
+
+            <div class="form-group col-12">
+              <label>Description</label>
+              <textarea type="text" class="form-control" rows="6"></textarea>
+            </div>
+
+            <div class="form-group col-12">
+              <button
+                type="button"
+                class="btn btn-primary btn-block"
+                (click)="selectTab(4)"
+              >
+                Next
+              </button>
+
+              <button
+                type="button"
+                class="btn btn-primary btn-block"
+                (click)="selectTab(2)"
+              >
+                Back
+              </button>
+            </div>
+          </tab>
+
+          <tab heading="Photos">
+            <div class="form-group col-12">
+              <div class="photo-control">
+                <button class="mt-5" type="button">Upload</button> <br />
+                This is under construction
+              </div>
+            </div>
+            <div class="form-group col-12">
+              <button
+                type="button"
+                class="btn btn-primary btn-block"
+                (click)="selectTab(3)"
+              >
+                Back
+              </button>
+              <button type="reset" class="btn btn-primary btn-block">
+                Cancel
+              </button>
+              <button type="submit" class="btn btn-primary btn-block">
+                Save
+              </button>
+            </div>
+          </tab>
+        </tabset>
+      </div>
+    </form>
+  </div>
+</div></div>
+  <div class="col-4">
+    <div class="card-header">
+      <h3>Your Property Preview</h3>
+    </div>
+    <div class="shadow-lg p-3 bg-white">
+      <app-property-card [property]="propertyView" [hideIcons]="true"></app-property-card>
+    </div>
   </div>
 </div>
+
