--- a/HSPA/Frontend/src/app/property/property-card/property-card.component.html
+++ b/HSPA/Frontend/src/app/property/property-card/property-card.component.html
@@ -5,7 +5,7 @@
     <img *ngIf="property.Image" class="card-img-top" src="assets/images/{{property.Image}}.jpg"/>
     <img *ngIf="!property.Image" class="card-img-top" src="assets/images/house-default.png"/>
   </div>
-  <ul class="list-inline text-center member-icons">
+  <ul *ngIf="!hideIcons" class="list-inline text-center member-icons">
     <li class="list-inline-item">
       <button class="btn btn-primary" routerLink='/property-detail/{{property.Id}}'><i class="far fa-edit"></i></button>
     </li>
@@ -14,10 +14,20 @@
     </li>
 
   </ul>
-  <div class ="card-body p-1">
-    <h4>{{property.Name}}</h4>
-    <h4>{{property.Type}}</h4>
-    <h4>{{property.Price}}</h4>
+  <div class="card-body p-1">
+    <h1 class="mb-0"> {{property.BHK}} BHK {{property.PType}} </h1>
+
+    in {{property.Name}}
+    <span *ngIf="property.Name">,</span>
+    {{property.City}}
+
+    <h6  class="mt-2">{{property.FType}}
+    <span *ngIf="property.FType !== 'Unfurnished'">Furnished</span> | Ready to Move</h6>
+
+    <hr class="mt-0 mb-2">
+
+    <h6 class="mb-0">Price: <span class>{{property.Price}} USD.</span> |
+      Area:  <span>{{property.BuiltArea}} Sq Ft </span> </h6>
   </div>
   </div>
 
