--- a/HSPA/Frontend/src/app/user/user-register/user-register.component.html
+++ b/HSPA/Frontend/src/app/user/user-register/user-register.component.html
@@ -1,57 +1,114 @@
 <div class="row">
   <div class="col-6 m-auto">
-  <div class="card m-auto">
-    <div class="card-header">
-      Register
-    </div>
-    <div class="card-body">
-      <form [formGroup]= "registerationForm" (ngSubmit)="onSubmit()">
-        <div class="form-group col-12">
+    <div class="card m-auto">
+      <div class="card-header">Register</div>
+      <div class="card-body">
+        <form [formGroup]="registerationForm" (ngSubmit)="onSubmit()">
+          <div class="form-group col-12">
             <label for="name" class="form-label">Name</label>
-            <input type="text" class="form-control" formControlName="userName">
-            <span  *ngIf ="!userName.valid
-            && userName.touched" class="error-block">
+            <input
+              type="text"
+              class="form-control"
+              formControlName="userName"
+            />
+            <span
+              *ngIf="!userName.valid && (userName.touched || userSubmitted)"
+              class="error-block"
+            >
               Please provide name
             </span>
-        </div>
+          </div>
 
-        <div class="form-group col-12">
-          <label for="email" class="form-label" >Email</label>
-          <input type="text" class="form-control" formControlName="userEmail">
-          <span *ngIf="!userEmail.valid && userEmail.touched" class="error-block">
+          <div class="form-group col-12">
+            <label for="email" class="form-label">Email</label>
+            <input
+              type="text"
+              class="form-control"
+              formControlName="userEmail"
+            />
+            <span
+              *ngIf="!userEmail.valid && (userEmail.touched || userSubmitted)"
+              class="error-block"
+            >
               <span *ngIf="userEmail.hasError('required')">
-                  Please provide email id
+                Please provide email id
               </span>
-              <span *ngIf="userEmail.hasError('email')">
+              <!-- <span *ngIf="userEmail.hasError('email')">
                 Please provide valid email address
+              </span> -->
             </span>
-          </span>
-        </div>
+          </div>
 
-        <div class="form-group col-12">
-          <label for="passwrod" class="form-label">Password</label>
-          <input type="password" class="form-control" formControlName="password">
-        </div>
+          <div class="form-group col-12">
+            <label for="passwrod" class="form-label">Password</label>
+            <input
+              type="password"
+              class="form-control"
+              formControlName="password"
+            />
+            <span
+              *ngIf="
+                !userPassword.valid && (userPassword.touched || userSubmitted)
+              "
+              class="error-block"
+            >
+              <span *ngIf="userEmail.hasError('required')">
+                Please provide password
+              </span>
+              <span *ngIf="userEmail.hasError('minLength')">
+                Password is at leat 8 characters
+              </span>
+            </span>
+          </div>
 
-        <div class="form-group col-12">
-          <label for="cpassword" class="form-label">Confirm Password</label>
-          <input type="password" class="form-control" formControlName="confirmPassword">
-        </div>
+          <div class="form-group col-12">
+            <label for="cpassword" class="form-label">Confirm Password</label>
+            <input
+              type="password"
+              class="form-control"
+              formControlName="confirmPassword"
+            />
+            <span
+              *ngIf="
+                !userConfirmPassword.valid &&
+                (userConfirmPassword.touched || userSubmitted)
+              "
+              class="error-block"
+            >
+              <span *ngIf="userConfirmPassword.hasError('required')">
+                Please provide confirm password
+              </span>
+              <span *ngIf="userConfirmPassword.hasError('notmatched')">
+                Confirm password and password are not matched
+              </span>
+            </span>
+          </div>
 
-        <div class="form-group col-12">
-          <label for="mobile" class="form-label">Mobile</label>
-          <input type="text" class="form-control" formControlName="mobile">
-        </div>
+          <div class="form-group col-12">
+            <label for="mobile" class="form-label">Mobile</label>
+            <input type="text" class="form-control" formControlName="mobile" />
+            <span
+              *ngIf="!userMobile.valid && (userMobile.touched || userSubmitted)"
+              class="error-block"
+            >
+              <span *ngIf="userMobile.hasError('required')">
+                Please provide mobile number
+              </span>
+              <span *ngIf="userMobile.hasError('maxLength')">
+                Password is at leat 10 characters
+              </span>
+            </span>
+          </div>
 
-        <div class="form-group col-12">
-          <button type="submit" class="btn btn-primary">Save</button>
-          <button type="reset" class="btn btn-secondary ml-2">Cancel</button>
-        </div>
+          <div class="form-group col-12">
+            <button type="submit" class="btn btn-primary">Save</button>
+            <button type="reset" class="btn btn-secondary ml-2">Cancel</button>
+          </div>
 
-        Form values:{{registerationForm.value | json}}<br/>
-        Form status:{{registerationForm.status}}
-      </form>
+          Form values:{{ registerationForm.value | json }}<br />
+          Form status:{{ registerationForm.status }}
+        </form>
+      </div>
     </div>
-  </div>
   </div>
 </div>
