--- a/HSPA/Frontend/src/styles.css
+++ b/HSPA/Frontend/src/styles.css
@@ -1,1 +1,4 @@
-@import  'assets/form.css'
+@import  'assets/form.css';
+@import '../node_modules/alertifyjs/build/css/alertify.min.css';
+@import '../node_modules/alertifyjs/build/css/themes/bootstrap.min.css';
+@import 'assets/tabs.css';
